--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
+    "nodemailer": "^6.7.0",
     "path": "^0.12.7"
   }
 }
