--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   },
   "homepage": "https://github.com/Shalabyyy/Centra#readme",
   "dependencies": {
+    "axios": "^0.23.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.2",
+    "moment": "^2.29.1",
     "nodemailer": "^6.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request-promise": "^4.2.6"
   }
 }
