--- a/centra-client/package.json
+++ b/centra-client/package.json
@@ -14,6 +14,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-fast-image": "^8.5.11",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
